# batteread

./: Cargo.toml  README.md  capture.btsnoop
examples/: example.rs
src/: battery_client.rs  battery_state.rs  lib.rs  main.rs
src/message/: mod.rs  soc_message.rs  voltages_message.rs
