[package]
name = "batteread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.31"
crc16 = "0.4.0"
hex = "*"
anyhow = "1.0.89"
bluest = "0.6.7"

[dev-dependencies]


