[package]
name = "batteread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bluetooth-serial-port-async = { version = "*", git = "https://github.com/felixwatts/bluetooth-serial-port-async.git", features = ["tokio"], default-features = false }
tokio = { version = "1.40.0", features = ["time", "io-util"] }
futures-util = "0.3.31"
crc16 = "0.4.0"
hex = "*"
bluest = "0.6.7"
anyhow = "1.0.90"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }


