[package]
name = "batteread"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Read status data from certain models of LiFePO4 Battery Management Systems over Bluetooth Low Energy. Tested with a battery made by li-gen.net."
repository = "https://github.com/felixwatts/batteread"
readme = "README.md"
keywords = ["battery", "bluetooth", "li-gen", "BMS", "BLE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["time", "io-util"] }
futures-util = "0.3.31"
crc16 = "0.4.0"
hex = "0.4.3"
bluest = "0.6.7"
anyhow = "1.0.90"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }


